# SimpleGameKit

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
include/SimpleGameKit/: SimpleGameKit.h
include/SimpleGameKit/Core/: AssetManager.h  Entity.h  EntityManager.h  Event.h  EventManager.h  Game.h  InputManager.h  Math.h  ResourceManager.h  Scene.h  System.h  Time.h  Utils.h
include/SimpleGameKit/Render/: Renderer.h  Sprite.h
src/: SimpleGameKit.cpp
src/Core/: AssetManager.cpp  Entity.cpp  EntityManager.cpp  Event.cpp  EventManager.cpp  Game.cpp  InputManager.cpp  Renderer.cpp  ResourceManager.cpp  Scene.cpp  System.cpp  Time.cpp
tests/: core.cpp  entity.cpp  events.cpp  resources.cpp  systems.cpp
